[tool.poetry]
name = "abot"
version = "0.1.0"
description = "Action Telegram Bot"
authors = ["Quan666 <i@rori.Email>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "3.8.3"
Telethon = "^1.25.2"
arrow = "^1.2.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
