[tool.poetry]
name = "abot"
version = "0.1.0"
description = "Action Telegram Bot"
authors = ["Quan666 <i@rori.Email>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8.3"
Telethon = "^1.28.5"
arrow = "^1.2.3"
pydantic = {extras = ["dotenv"], version = "^2.0.3"}
feedparser = "^6.0.10"
magneturi = "^1.3"
aiofiles = "^23.1.0"
httpx = "^0.24.1"
fastapi = "^0.100.0"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
APScheduler = "^3.10.1"
uvicorn = "^0.23.1"
python-socks = "^2.3.0"
async-timeout = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
